--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Immunel</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
+    <title>Immuneel</title>
+    <!-- <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png"> -->
 </head>
 
 <body>
